<resources>
    <string name="app_name">MyRecord</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_add_product">Add Product</string>
    <string name="menu_add_employee">Add Employee</string>
    <string name="menu_daily_production_entry">Daily Production Entry</string>
    <string name="menu_daily_cash_distribution">Daily Cash Distribution</string>
    <string name="menu_employee_wages">Employee Wages</string>
    <string name="menu_app_info">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="product_id">product_id</string>
    <string name="product_id_tv">Product ID</string>
    <string name="product_name_tv">Product Name</string>
    <string name="product_cost_tv">Product Cost</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="employee_id_tv">Employee ID</string>
    <string name="employee_name_tv">Employee Name</string>
    <string name="employee_contact_tv">Contact</string>
    <string name="address">Address</string>
    <string name="aadharcard">AadharCard</string>
    <string name="bankname">Bank Name</string>
    <string name="ifsc_code">Ifsc Code</string>
    <string name="bank_account">Account No</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="uuid">UUID</string>
    <string name="created_date">Date</string>
    <string name="price">Price (Rs)</string>
    <string name="qty">Qty</string>
    <string name="total">Total (Rs)</string>

    <string name="product_prompt">Products</string>
    <string name="employee_prompt">Employee</string>
    <string name="cash_distribute">Cash Distributation</string>
</resources>
