<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:gravity="center" />

    <TextView

        android:id="@+id/uuid"
        android:layout_height="match_parent"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/uuid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView

        android:id="@+id/name"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/employee_name_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/date"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/created_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/product_name"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/product_name_tv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/price"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/qty"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/qty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</TableRow>