<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/uuid"
        android:layout_weight="0.25"
        android:text="ID"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/emp_id"
        android:layout_weight="0.25"
        android:text="Name"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:layout_weight="0.25"
        android:layout_gravity="center"
        android:text="@string/created_date"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/product_name"
        android:layout_weight="0.25"
        android:text="@string/product_name_tv"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:layout_weight="0.25"
        android:text="@string/price"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/qty"
        android:layout_weight="0.25"
        android:text="@string/qty"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/total"
        android:layout_gravity="center"
        android:layout_weight="0.25"
        android:text="@string/total"
        android:gravity="center"/>
</TableRow>