<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_employee_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_id_tv"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:editable="false"
            android:textSize="@dimen/text13sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_employee_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_name_tv"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="@dimen/text13sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_employee_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_contact_tv"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="10"
            android:textSize="@dimen/text13sp" />
    </com.google.android.material.textfield.TextInputLayout>

    //----
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_employee_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="@dimen/text13sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_employee_adharcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aadharcard"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="@dimen/text13sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_bankname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bankname"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="10"
            android:textSize="@dimen/text13sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_employee_ifsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ifsc_code"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="@dimen/text13sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_bank_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bank_account"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="10"
            android:textSize="@dimen/text13sp" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>