<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_gray"
                        android:text="@string/employee_name_tv"
                        android:textSize="@dimen/text12sp"/>

                    <EditText
                        android:id="@+id/input_employee_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/employee_name_tv"
                        android:inputType="text"
                        android:visibility="gone"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textSize="@dimen/text13sp" />
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/employeeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt = "@string/employee_prompt"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_created_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/created_date"
                        android:inputType="text"
                        android:editable="false"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textSize="@dimen/text13sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_gray"
                        android:text="@string/product_name_tv"
                        android:textSize="@dimen/text12sp"/>

                    <EditText
                        android:id="@+id/input_product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_name_tv"
                        android:inputType="number"
                        android:editable="false"
                        android:maxLength="10"
                        android:visibility="gone"
                        android:maxLines="1"
                        android:textSize="@dimen/text13sp" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/productSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt = "@string/product_prompt"/>
                </com.google.android.material.textfield.TextInputLayout>

                //----
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        android:editable="false"
                        android:inputType="number"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textSize="@dimen/text13sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_qty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/qty"
                        android:editable="false"
                        android:inputType="number"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textSize="@dimen/text13sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/total"
                        android:inputType="number"
                        android:editable="false"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textSize="@dimen/text13sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_employee_ifsc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ifsc_code"
                        android:inputType="text"
                        android:editable="false"
                        android:visibility="gone"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textSize="@dimen/text13sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/input_bank_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bank_account"
                        android:inputType="number"
                        android:editable="false"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:visibility="gone"
                        android:textSize="@dimen/text13sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>