<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_product_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_id_tv"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="@dimen/text13sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name_tv"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="@dimen/text13sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_product_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_cost_tv"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="@dimen/text13sp" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>