<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_employee_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/employee_id_tv"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="@dimen/text13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_employee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_name_tv"
                android:inputType="text"
                android:editable="false"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="@dimen/text13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_employee_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_contact_tv"
                android:inputType="number"
                android:editable="false"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="@dimen/text13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_employee_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:editable="false"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="@dimen/text13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_employee_adharcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aadharcard"
                android:editable="false"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="@dimen/text13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_bankname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bankname"
                android:inputType="number"
                android:editable="false"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="@dimen/text13sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_employee_ifsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ifsc_code"
                android:inputType="text"
                android:editable="false"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="@dimen/text13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_bank_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_account"
                android:inputType="number"
                android:editable="false"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="@dimen/text13sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10dp"
            android:orientation="horizontal"
            android:gravity="end">
        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ok"
            android:layout_margin="@dimen/margin4dp"
            android:background="@drawable/shapebutton"/>
        <Button
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="edit"
            android:textColor="@color/colorAccent"
            android:layout_margin="@dimen/margin4dp"
            android:background="@drawable/buttonshapewhite"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
</layout>